[gd_scene load_steps=3 format=3 uid="uid://qjmhlkn72wuy"]

[ext_resource type="Script" path="res://AttacksAndHitboxes/Tim/crouching_punch_tim.gd" id="1_uc8gs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0d51o"]
radius = 19.0263

[node name="Crouching Punch Tim" type="Area2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_uc8gs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(167, 55)
shape = SubResource("CircleShape2D_0d51o")

[node name="HitBoxTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="HitBoxTimer" to="." method="_on_hit_box_timer_timeout"]
